--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,7 +40,7 @@
     <string name="notifications_title">Notifications</string>
     <string name="notifications_hide">Hide</string>
     <string name="notifications_headsup">Heads Up</string>
-    <string name="notifications_island">Island</string>
+    <string name="notifications_reticker">reTicker</string>
     <string name="notifications_danmaku">Danmaku</string>
     <string name="stay_awake_title">Stay awake</string>
     <string name="stay_awake_summary">Keep screen awake while in the game</string>
@@ -85,7 +85,7 @@
     <string name="in_game_notifications_title">In-game notifications</string>
     <string name="in_game_notifications_hide">Do not show</string>
     <string name="in_game_notifications_headsup">Show as Heads Up</string>
-    <string name="in_game_notifications_island">Show as Island</string>
+    <string name="in_game_notifications_reticker">Show as reTicker</string>
     <string name="in_game_notifications_danmaku">Show as Danmaku</string>
 
     <string name="double_tap_to_sleep_title">Disable double tap to sleep</string>
